# biblio-django

./: .env_exemplo  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
biblioteca/: admin.py  models.py  serializers.py  views.py
biblioteca/migrations/: 0001_initial.py  0002_alter_title_genre.py  0002_titulo_capa.py
biblioteca/models/: __init__.py  titulo.py
biblioteca/serializers/: __init__.py  autor.py  categoria.py  titulo.py
biblioteca/views/: __init__.py  autor.py  categoria.py  titulo.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
