[project]
name = ""
version = ""
description = ""
autores = [
    {name = "Matheus Marques Gobetti", email = "gobetti.ifc@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
