[project]
name = ""
version = ""
description = ""
autores = [
    {name = "Matheus Marques Gobetti", email = "gobetti.ifc@gmail.com"},
]
dependencies = [
    "django>=4.2.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=69.0.2",
    "python-magic>=0.4.27",
    "Pillow>=10.1.0",
    "drf-spectacular>=0.26.5",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

